[package]
name = "frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
mini-redis = "0.4"
bytes = "1.5.0"
anyhow = "1.0.79"
rand = "0.8.5"
ipnetwork = "0.20.0"
mio = "0.8.10"
actix-web = "4.3.1"
