[package]
name = "tower_services"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.9.0"
mini-redis = "0.4.1"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
futures = "0.3.31"
once_cell = "1.18.0"
hyper = { version = "1.6.0", features = ["full"] }
# axum = "0.8.1"
tower = "0.5.2"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["tokio", "service"] }
log = "0.4.26"
env_logger = "0.11.6"
pin-project = "1"

[dev-dependencies]
# axum-test-helper = "0.3.0"

[lints.rust]
unused = "allow"
unsafe_code = "allow"

[lints.clippy]
enum_glob_use = "deny"
